@@ -7,20 +7,10 @@ Proyecto conceptos basicos de programacion orientada a objetos
 MV options - patch de javafx 
 
 windows:
-<<<<<<< HEAD
 
     --module-path "\path\to\javafx-sdk-24.0.2\lib" --add-modules javafx.controls,javafx.fxml
 
 linux/Mac:
 
     --module-path /path/to/javafx-sdk-24.0.2/lib --add-modules javafx.controls,javafx.fxml
-=======
-    
-    --module-path "\path\to\javafx-sdk-24.0.2\lib" --add-modules javafx.controls,javafx.fxml
-    
-linux/Mac: 
-    
-    --module-path /path/to/javafx-sdk-24.0.2/lib --add-modules javafx.controls,javafx.fxml
-
->>>>>>> c1ea5fc61e196e9042e04648e7e0f077bff4a20d
 
